@@ -1,3 +1,7 @@
+2008-12-16  Timo Teras  <timo.teras@iki.fi>
+	* src/racoon/pfkey.c: Fix transport mode address selection
+	  in acquire handling (broke on 2008-12-05 commit)
+
 2008-12-08  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/isakmp.c: Fixed compilation when DPD support is
 	  disabled.
